fix build errors

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -12,13 +12,10 @@ color_harmony:
   - pl.powsty.colorharmony/pl.powsty.colorharmony.SplashScreenActivity
 
 color_picker:
-  - gmikhail.colorpicker/gmikhail.colorpicker.activities/MainActivity
+  - gmikhail.colorpicker/gmikhail.colorpicker.activities.MainActivity
 
 nbe_mobile:
   - com.ofss.obdx.and.nbe.com.eg/com.ofss.digx.mobile.android.SplashActivity
-
-terminal:
-  - com.termux.tasker/com.termux.tasker.activities.TermuxTaskerActivity
 
 sbi_card:
   - com.sbi.upi/com.sbi.upi.customerMode.modules.initial.splash.SplashActivity
