--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,19 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+androidide:
+  - com.itsaky.androidide/com.itsaky.androidide.activities.SplashActivity
+
+camerax_info:
+  - dev.zwander.cameraxinfo/dev.zwander.cameraxinfo.MainActivity
+
+gpt_assistant:
+  - io.sunshine0523.gpt_assistant/io.sunshine0523.gpt_assistant.ui.setup.SetupActivity
+  - io.sunshine0523.gpt_assistant/io.sunshine0523.gpt_assistant.ui.floating.FloatingActivity
+
+language_selector:
+  - vegabobo.languageselector/vegabobo.languageselector.MainActivity}
+
+runepad:
+  - app.suhasdissa.mathpad/app.suhasdissa.mathpad.MainActivity}
