--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,9 @@ language_selector:
 
 runepad:
   - app.suhasdissa.mathpad/app.suhasdissa.mathpad.MainActivity}
+
+basic_call_recorder:
+  - com.chiller3.bcr/com.chiller3.bcr.settings.SettingsActivity}
+
+gloom:
+  - com.materiiapps.gloom.debug/com.materiiapps.gloom.ui.GloomActivity
