add icon for Tmoney (#677)
* add icons for mobile tmoney

* Update new_icons.yaml for mobile tmoney

* Update new_icons.yaml for mobile tmoney

* adjust icon size

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ basic_call_recorder:
 
 gloom:
   - com.materiiapps.gloom.debug/com.materiiapps.gloom.ui.GloomActivity
+
+tmoney:
+  - com.lgt.tmoney/com.tmoney.activity.IntroActivity
