--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,6 @@ gloom:
 
 tmoney:
   - com.lgt.tmoney/com.tmoney.activity.IntroActivity
+
+another_widget:
+  - com.tommasoberlose.anotherwidget.azuo/com.tommasoberlose.anotherwidget.ui.activities.SplashActivity
