--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,12 @@ tmoney:
 
 another_widget:
   - com.tommasoberlose.anotherwidget.azuo/com.tommasoberlose.anotherwidget.ui.activities.SplashActivity
+
+james_dsp:
+  - james.dsp/me.timschneeberger.rootlessjamesdsp.activity.MainActivity
+
+stately:
+  - com.lloydtorres.stately/com.lloydtorres.stately.login.LoginActivity
+
+rabbit_rewards:
+  - th.co.carrotrewards/th.co.carrotrewards.MainActivity
