--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -45,3 +45,15 @@ stately:
 
 rabbit_rewards:
   - th.co.carrotrewards/th.co.carrotrewards.MainActivity
+
+gramophone:
+  - org.akanework.gramophone/org.akanework.gramophone.MainActivity
+
+pixelfed:
+  - com.pixelfed/com.pixelfed.MainActivity
+
+simple_calculator_converter:
+  - com.capybara.calculator/com.capybara.calculator.MainActivity}
+
+wormhole:
+  - eu.heili.wormhole/eu.heili.wormhole.MainActivity
