--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -57,3 +57,15 @@ simple_calculator_converter:
 
 wormhole:
   - eu.heili.wormhole/eu.heili.wormhole.MainActivity
+
+telegram:
+  - top.qwq2333.nullgram/org.telegram.messenger.DefaultIcon
+
+pdf_reader:
+  - com.all.document.reader.doc.pdf.reader/com.all.document.reader.doc.pdf.reader.SplashActivity
+
+starbucks:
+  - com.starbucks.tw/com.starbucks.tw.activity.SplashActivity
+
+instagram:
+  - com.instaflow.android/com.instagram.android.activity.MainTabActivity
