--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -71,19 +71,19 @@ instagram:
   - com.instaflow.android/com.instagram.android.activity.MainTabActivity
 
 prolauncher:
- - app.prolauncher/app.prolauncher.MainActivity
+  - app.prolauncher/app.prolauncher.MainActivity
 
 amplenote:
- - com.amplenote/com.amplenote.MainActivity
+  - com.amplenote/com.amplenote.MainActivity
 
 takka:
- - takka.me.app/takka.me.app.MainActivity
+  - takka.me.app/takka.me.app.MainActivity
 
 talk_to_myself:
- - com.horizon.myself/com.horizon.myself.MainActivity
+  - com.horizon.myself/com.horizon.myself.MainActivity
 
 valu:
- - com.efgh.customer/com.efgh.customer.MainActivity
+  - com.efgh.customer/com.efgh.customer.MainActivity
 
 yalla:
- - io,payskyyalla/io.payskyyallasuperapp.ui.splash.SplashActivity
+  - io.paysky.yalla/io.paysky.yallasuperapp.ui.splash.SplashActivity
