--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -69,3 +69,21 @@ starbucks:
 
 instagram:
   - com.instaflow.android/com.instagram.android.activity.MainTabActivity
+
+prolauncher:
+  - app.prolauncher/app.prolauncher.MainActivity
+
+amplenote:
+  - com.amplenote/com.amplenote.MainActivity
+
+takka:
+  - takka.me.app/takka.me.app.MainActivity
+
+talk_to_myself:
+  - com.horizon.myself/com.horizon.myself.MainActivity
+
+valu:
+  - com.efgh.customer/com.efgh.customer.MainActivity
+
+yalla:
+  - io.paysky.yalla/io.paysky.yallasuperapp.ui.splash.SplashActivity
