new 20 icons, 5 compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -87,3 +87,77 @@ valu:
 
 yalla:
   - io.paysky.yalla/io.paysky.yallasuperapp.ui.splash.SplashActivity
+
+grimoire_incremental:
+  - com.dragonmegaliths.grimoire/com.unity3d.player.UnityPlayerActivity
+
+home_exchange:
+  - com.guesttoguest.android/com.guesttoguest.gtgandroid.presentation.splashscreen.SplashScreenActivity
+
+musicbrainz:
+  - org.metabrainz.android/org.metabrainz.android.presentation.features.dashboard.DashboardActivity
+
+navionics_boating:
+  - it.navionics.singleAppMarineLakesHD/it.navionics.SplashActivity
+
+monday_com:
+  - com.monday.monday/com.dapulse.dapulse.refactor.starter.context.StarterActivity
+
+switchbuddy:
+  - cz.gemsi.switchbuddy/cz.gemsi.switchbuddy.app.system.MainActivity
+
+switchbuddy_alt_1: {}
+
+western_union_send_money:
+  - com.westernunion.moneytransferr3app.apac/com.westernunion.moneytransferr3app.MainActivity
+
+western_union_send_money_alt_1: {}
+
+vampire_survivors:
+  - com.poncle.vampiresurvivors/com.unity3d.player.UnityPlayerActivity
+
+_20_minutes_till_dawn:
+  - com.Flanne.MinutesTillDawn.roguelike.shooting.fr.gp/com.unity3d.player.UnityPlayerActivity
+
+samsung_camera_assistant:
+  - com.samsung.android.app.cameraassistant/com.samsung.android.app.cameraassistant.MainActivity
+
+samsung_edgetouch:
+  - com.samsung.android.app.edgetouch/com.samsung.android.app.edgetouch.ui.activity.MainActivity
+
+samsung_health_monitor:
+  - com.samsung.android.shealthmonitors/com.samsung.android.shealthmonitor.ui.activity.MainActivity
+
+samsung_wonderland:
+  - com.samsung.android.wonderland.wallpaper/com.samsung.android.wonderland.wallpaper.settings.StartupActivity
+
+akulaku:
+  - io.silvrr.installment/io.silvrr.installment.module.startup.SplashActivity
+
+you_com:
+  - com.you.browser/com.you.browser.App
+
+oppo_theme_store:
+  - com.oplus.themestore/com.nearme.themespace.activities.ThemeActivity
+
+gamezone:
+  - com.xiaomi.glgm/com.xiaomi.glgm.home.ui.SplashActivity
+
+inpost:
+  - pl.inpost.inmobile/pl.inpost.inmobile.splashScreen.presentation.SplashScreenActivity
+
+millenium_bank:
+  - wit.android.bcpBankingApp.millennium/wit.android.bcpBankingApp.ui.activities.SplashScreenActivity
+  - wit.android.bcpBankingApp.millenniumPL/pl.bankmillennium.gui.prelogin.SplashScreenActivity
+
+moey:
+  - pt.moey.app/pt.i9.app.presentation.MainActivity
+
+pikpak:
+  - com.pikcloud.pikpak/com.pikcloud.app.SplashActivity
+
+filmarks:
+  - in.tsumiki.filmarks/in.tsumiki.filmarks.activity.SplashActivity
+
+mijnkpn:
+  - nl.kpn.mijn/com.zoontek.rnbootsplash.RNBootSplashActivityappiconlight
