--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -161,3 +161,51 @@ filmarks:
 
 mijnkpn:
   - nl.kpn.mijn/com.zoontek.rnbootsplash.RNBootSplashActivityappiconlight
+
+luxer_one:
+  - com.luxerone.mobile.residentapp/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+mit_ai2_companion:
+  - edu.mit.appinventor.aicompanion3/edu.mit.appinventor.aicompanion3.Screen1
+
+xumm:
+  - com.xrpllabs.xumm/com.xrpllabs.xumm.MainActivity
+
+itvx:
+  - air.ITVMobilePlayer/com.candyspace.itvplayer.ui.launcher.LauncherActivity
+
+estories:
+  - com.estories/com.estories.view.activity.SplashActivity_
+
+sleipnir:
+  - jp.co.fenrir.android.sleipnir_black/com.fenrir_inc.sleipnir.main.MainActivity
+
+ipray:
+  - com.guidedways.ipray/com.guidedways.ipray.screen.IPSplashLauncher
+
+erudite_dictionary:
+  - com.erudite.ecdict/com.erudite.ecdict.HomePage
+
+cittamobi:
+  - br.com.cittabus/br.com.cittati.cittamobi_flutter.MainActivity
+
+et_money:
+  - com.smartspends/com.til.etwealth.etmoney.android.view.SplashScreen
+
+box_box_club:
+  - club.boxbox.android/club.boxbox.android.activity.SplashActivity
+
+barq:
+  - com.furryapp/com.furryapp.MainActivity
+
+dcinside:
+  - com.dcinside.app.android/com.dcinside.app.MainActivity
+
+skanetrafiken:
+  - se.skanetrafiken.washington/se.skanetrafiken.washington.StartActivity
+
+literaki:
+  - com.ququplay.literaki/com.ququplay.literaki.MainActivity
+
+mitid:
+  - dk.mitid.app.android/dk.mitid.app.android.activity.MainActivity
