new 14 icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -209,3 +209,48 @@ literaki:
 
 mitid:
   - dk.mitid.app.android/dk.mitid.app.android.activity.MainActivity
+
+sush:
+  - app.grotinou.sushi/app.grotinou.sushi.MainActivity
+
+a_dance_of_fire_and_ice:
+  - com.fizzd.connectedworlds/com.unity3d.player.UnityPlayerActivity
+
+kazanexpress:
+  - com.kazanexpress.ke_app/ru.kazanexpress.feature.splash.presentation.SplashScreenActivity
+
+plugshare:
+  - com.xatori.Plugshare/com.xatori.plugshare.ui.SplashScreenActivity
+
+spark_nz:
+  - nz.co.telecom.smartphone.android/nz.co.spark.launchnavigator.ui.LaunchActivity
+
+dtf:
+  - ru.cmtt.dtf/ru.cmtt.osnova.Default
+
+be_my_eyes:
+  - com.bemyeyes.bemyeyes/com.bemyeyes.ui.BootActivity
+
+empendium:
+  - pl.mp.empendium/pl.mp.empendium.ui.MainActivity
+
+niantic_wayfarer:
+  - com.nianticlabs.argeo.niamapapp/com.unity3d.player.UnityPlayerActivity
+
+yahoo_japan_auction:
+  - jp.co.yahoo.android.yauction/jp.co.yahoo.android.yauction.YAucCategoryNodeActivity
+
+zus_coffee:
+  - com.coffee.love_coffee/com.coffee.love_coffee.MainActivity
+
+drive2:
+  - com.drive2/com.drive2.v3.ui.activity.StartupActivity
+
+ajax_security_system:
+  - com.ajaxsystems/com.ajaxsystems.ui.activity.LauncherActivity
+
+ukrainian_railways:
+  - ua.gov.uz/com.ua.railways.ui.splash.SplashActivity
+
+telegram:
+  - com.radolyn.ayugram/com.exteragram.messenger.DefaultIcon
