fix build errors & update Wormhole icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,13 +20,13 @@ gpt_assistant:
   - io.sunshine0523.gpt_assistant/io.sunshine0523.gpt_assistant.ui.floating.FloatingActivity
 
 language_selector:
-  - vegabobo.languageselector/vegabobo.languageselector.MainActivity}
+  - vegabobo.languageselector/vegabobo.languageselector.MainActivity
 
 runepad:
-  - app.suhasdissa.mathpad/app.suhasdissa.mathpad.MainActivity}
+  - app.suhasdissa.mathpad/app.suhasdissa.mathpad.MainActivity
 
 basic_call_recorder:
-  - com.chiller3.bcr/com.chiller3.bcr.settings.SettingsActivity}
+  - com.chiller3.bcr/com.chiller3.bcr.settings.SettingsActivity
 
 gloom:
   - com.materiiapps.gloom.debug/com.materiiapps.gloom.ui.GloomActivity
@@ -54,9 +54,6 @@ pixelfed:
 
 simple_calculator_converter:
   - com.capybara.calculator/com.capybara.calculator.MainActivity}
-
-wormhole:
-  - eu.heili.wormhole/eu.heili.wormhole.MainActivity
 
 telegram:
   - top.qwq2333.nullgram/org.telegram.messenger.DefaultIcon
