fix build errors

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,7 +53,7 @@ pixelfed:
   - com.pixelfed/com.pixelfed.MainActivity
 
 simple_calculator_converter:
-  - com.capybara.calculator/com.capybara.calculator.MainActivity}
+  - com.capybara.calculator/com.capybara.calculator.MainActivity
 
 telegram:
   - top.qwq2333.nullgram/org.telegram.messenger.DefaultIcon
