--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+jellybook:
+  - com.KaraWilson.JellyBook/com.KaraWilson.JellyBook.MainActivity
+
+little_file_explorer:
+  - com.martinmimigames.simplefileexplorer/com.martinmimigames.simplefileexplorer.MainActivity
+
+textbender:
+  - sh.eliza.textbender/sh.eliza.textbender.SettingsActivity
