--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,37 @@ little_file_explorer:
 
 textbender:
   - sh.eliza.textbender/sh.eliza.textbender.SettingsActivity
+
+camera:
+  - com.google.android.GoogleCameraEngR13F2/com.android.camera.CameraLauncher
+  - com.google.android.GoogleCameraAsp/com.android.camera.CameraLauncher
+
+pococha:
+  - com.dena.pokota/com.dena.pokota.feature.splash.SplashActivity
+
+everskies:
+  - com.everskies.app/com.everskies.app.MainActivity
+
+la_banque_postale:
+  - com.fullsix.android.labanquepostale.accountaccess/com.fullsix.android.labanquepostale.accountaccess.BanquePostale
+
+music_maker_jam:
+  - com.magix.android.mmjam/com.magix.android.mmj.start.StartActivity
+
+autotagger:
+  - com.serg.chuprin.tageditor/com.serg.chuprin.tageditor.app.main.view.MainActivity
+
+esound:
+  - com.spicysparks.esound/com.esound.MainActivity
+
+dissembler:
+  - com.ianmaclarty.dissembler/xyz.amulet.AmuletActivity
+
+pkp_intercity:
+  - pkp.ic.eicmobile/pkp.ic.eicmobile.MainActivity
+
+heyjapan:
+  - com.eup.heyjapan/com.eup.heyjapan.activity.splash.SplashActivity
+
+dont_starve:
+  - com.kleientertainment.doNotStarvePocket/com.kleientertainment.doNotStarvePocket.DoNotStarveActivity
