--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -51,3 +51,21 @@ heyjapan:
 
 dont_starve:
   - com.kleientertainment.doNotStarvePocket/com.kleientertainment.doNotStarvePocket.DoNotStarveActivity
+
+audio_share:
+  - io.github.mkckr0.audio_share_app/io.github.mkckr0.audio_share_app.MainActivity
+
+codec_info:
+  - com.parseus.codecinfo/com.parseus.codecinfo.ui.MainActivity
+
+installerx:
+  - com.rosan.installer.x/com.rosan.installer.ui.activity.SettingsActivity
+
+looney_tunes:
+  - com.aqupepgames.projectpepe/com.scopely.unity.ScopelyUnityActivity
+
+round_sync:
+  - de.felixnuesse.extract/ca.pkay.rcloneexplorer.Activities.MainActivity
+
+sunmachine:
+  - pl.blach.sunmachine/pl.blach.sunmachine.MainActivity
