--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -69,3 +69,27 @@ round_sync:
 
 sunmachine:
   - pl.blach.sunmachine/pl.blach.sunmachine.MainActivity
+
+abwaab:
+  - me.abwaab.abwaabv2_app/me.abwaab.abwaabv2_app.MainActivity
+
+aladwaa:
+  - com.nahdetmisr.adwaa/com.nahdetmisr.adwaa.MainActivity
+
+halan:
+  - com.halanuser/com.halanuser.ui.splash.activity.SplashActivity
+
+money_fellows:
+  - com.moneyfellows.mobileapp/com.moneyfellows.mobileapp.MainActivity
+
+souhoola:
+  - com.cicapital.cicf.android.myapplication/com.cicf.android.souhoola.core.presentation.MainActivity
+
+thndr:
+  - com.axismarkets.thndr/com.axismarkets.thndr.MainActivity
+
+town_team:
+  - co.shopney.townteam/com.matkit.base.activity.ScanActivity
+
+zamerican_english:
+  - com.zamericanenglish/com.zamericanenglish.ui.activity.SplashActivity
