--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -69,3 +69,6 @@ round_sync:
 
 sunmachine:
   - pl.blach.sunmachine/pl.blach.sunmachine.MainActivity
+
+sprinti:
+  - hannover.rider/via.rider.features.splash.SplashActivityKt
