--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -96,3 +96,9 @@ zamerican_english:
 
 sprinti:
   - hannover.rider/via.rider.features.splash.SplashActivityKt
+
+goodreads:
+  - com.goodreads/com.goodreads.kindle.ui.activity.RoutingActivity
+
+pixel_search:
+  - rk.android.app.pixelsearch/rk.android.app.pixelsearch.activites.HomeActivity
