add compinfo for Telekom, remove redundant icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -96,3 +96,6 @@ zamerican_english:
 
 sprinti:
   - hannover.rider/via.rider.features.splash.SplashActivityKt
+
+telekom:
+  - ro.telekom.myaccount/com.telekom.oneapp.launcher.components.launcher.LauncherActivity
