--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -99,3 +99,33 @@ sprinti:
 
 telekom:
   - ro.telekom.myaccount/com.telekom.oneapp.launcher.components.launcher.LauncherActivity
+
+sun_direct:
+  - com.sundirect.sundth/crc6493028f2048013d4f.SplashActivity
+
+aim_labs:
+  - gg.statespace.aimlab/com.google.firebase.MessagingUnityPlayerActivity
+
+bemanager:
+  - com.playmister/com.playmister.MainActivity
+
+fora:
+  - ua.fora.android/ua.silpo.android.ui.activity.DynamicLinksRouteActivity
+
+schul_cloud:
+  - de.heinekingmedia.schulcloud/de.heinekingmedia.stashcat.start.StartActivity
+
+vocabulary:
+  - com.hrd.vocabulary/com.hrd.view.onboarding.SplashScreenActivity_appicon0
+
+cleaner:
+  - com.github.bmx666.appcachecleaner/com.github.bmx666.appcachecleaner.ui.activity.AppCacheCleanerActivity
+
+keepclean:
+  - com.iclean.master.boost/com.iclean.master.boost.module.setting.SplashActivity
+
+leon_the_url_cleaner:
+  - com.miui.securitycleaner/com.miui.securitycleaner.MainActivity
+
+cleaner_whatsapp:
+  - com.tserumula.dbcleanerforwhatsapp/com.tserumula.dbcleanerforwhatsapp.MainActivity
