Added Pixel Search, Added ComponentInfo for Goodreads (#682)
* Add files via upload

* Update new_icons.yaml

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -94,6 +94,12 @@ town_team:
 zamerican_english:
   - com.zamericanenglish/com.zamericanenglish.ui.activity.SplashActivity
 
+goodreads:
+  - com.goodreads/com.goodreads.kindle.ui.activity.RoutingActivity
+
+pixel_search:
+  - rk.android.app.pixelsearch/rk.android.app.pixelsearch.activites.HomeActivity
+
 telekom:
   - ro.telekom.myaccount/com.telekom.oneapp.launcher.components.launcher.LauncherActivity
 
