new 9 icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,33 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+svt_play:
+  - se.svt.android.svtplay/se.svt.svtplay.ui.mobile.MainActivity
+
+payoneer:
+  - com.payoneer.android/com.payoneer.SplashActivity
+
+gomo_ph:
+  - ph.com.globe.gomo/ph.com.globe.gomo.MainActivity
+
+aha_games:
+  - net.bat.store/net.bat.store.view.activity.SplashActivity
+
+flexcil:
+  - com.flexcil.flexcilnote/com.flexcil.flexcilnote.MainActivity
+
+skiff_mail:
+  - com.skemailmobileapp/com.skemailmobileapp.MainActivity
+
+skiff_mail_alt_1: {}
+
+drinkable:
+  - com.moimob.drinkable/com.moimob.drinkable.MainActivity
+
+nothing_glyph_composer:
+  - com.nothing.glyph.composer/com.nothing.glyph.composer.ui.MainActivity
+
+brotato:
+  - com.brotato.shooting.survivors.games.paid.android/com.unity3d.player.UnityPlayerActivity
+  - com.brotato.shooting.survivors.action.roguelike/com.unity3d.player.UnityPlayerActivity
