--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -38,3 +38,15 @@ nothing_glyph_composer:
 brotato:
   - com.brotato.shooting.survivors.games.paid.android/com.unity3d.player.UnityPlayerActivity
   - com.brotato.shooting.survivors.action.roguelike/com.unity3d.player.UnityPlayerActivity
+
+abjjad:
+  - com.abjjad.app/com.abjjad.app.ui.activities.auth.LoginActivity
+
+mantooq:
+  - ca.basira.mantooq/com.ryanheise.audioservice.AudioServiceActivity
+
+phonemes:
+  - net.blackenvelope.write.phonemes/net.blackenvelope.write.MainActivity
+
+swipewipe:
+  - com.afternoonproducts.swipewipe/com.afternoonproducts.swipewipe.SplashActivity
