new 5 icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -50,3 +50,21 @@ phonemes:
 
 swipewipe:
   - com.afternoonproducts.swipewipe/com.afternoonproducts.swipewipe.SplashActivity
+
+bonbon:
+  - hr.bonbon.bonbonapp/hr.bonbon.bonbonapp.SplashActivity
+
+skeelo:
+  - br.com.gold360.skeelo/br.com.gold360.goldebooks.ui.SplashActivity
+
+kyobo:
+  - mok.android/mok.android.ui.activity.intro.IntroActivity
+
+vkontakte:
+  - uk.openvk.android.legacy/uk.openvk.android.legacy.ui.core.activities.MainActivity
+
+codecheck:
+  - ch.ethz.im.codecheck/info.codecheck.android.ui.SplashActivity
+
+riff_studio:
+  - net.brazzi64.riffstudio/net.brazzi64.riffstudio.RiffStudioActivity
