Add 2 icons + 1 component

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,3 +68,12 @@ codecheck:
 
 riff_studio:
   - net.brazzi64.riffstudio/net.brazzi64.riffstudio.RiffStudioActivity
+
+dots:
+  - com.nerdyoctopus.gamedots/com.weplaydots.dotsclassic.DotsClassicActivity
+
+transmission:
+  - com.lojugames.games.transmission/com.unity3d.player.UnityPlayerActivity
+
+icsx5:
+  - at.bitfire.icsdroid/at.bitfire.icsdroid.ui.CalendarListActivity
