--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -77,3 +77,84 @@ transmission:
 
 icsx5:
   - at.bitfire.icsdroid/at.bitfire.icsdroid.ui.CalendarListActivity
+
+blackvue:
+  - comb.blackvuec/comb.blackvuec.LoadingActivity
+
+boostcamp:
+  - com.bpmhealth.boostcamp/com.bpmhealth.boostcamp.MainActivity
+
+cache_cleaner:
+  - com.github.bmx666.appcachecleaner/com.github.bmx666.appcachecleaner.ui.activity.AppCacheCleanerActivity
+
+clear:
+  - com.clearme.clearapp/com.clearme.clearapp.splashscreen.SplashScreenActivity
+
+cloud_personnel_cozy:
+  - io.cozy.flagship.mobile/io.cozy.flagship.mobile.MainActivitycozy
+
+cryten:
+  - com.vertumus.cryten/com.vertumus.cryten.activities.SplashActivity
+
+dontkillmyapp:
+  - com.urbandroid.dontkillmyapp/com.urbandroid.dontkillmyapp.MainActivity
+
+go_city:
+  - com.gocitypass/com.gocitypass.MainActivity
+
+greentooth:
+  - com.smilla.greentooth/com.smilla.greentooth.MainActivity
+
+hashnode:
+  - com.hashnode.hashnode/com.hashnode.hashnode.MainActivity
+
+line_man:
+  - com.linecorp.linemanth/net.appsynth.lineman.view.splash.SplashActivity
+
+minimalist_music_player:
+  - mohsen.muhammad.minimalist/mohsen.muhammad.minimalist.app.main.MainActivity
+
+motorola_recorder:
+  - com.motorola.audiorecorder/com.motorola.audiorecorder.ui.main.MainActivity
+
+mydramalist:
+  - com.mydramalist.app/com.mydramalist.app.MainActivity
+
+mypup:
+  - com.mypup.apppublic/crc646540cb34b510a2b9.MainActivity
+
+nekobox:
+  - moe.nb4a/io.nekohasekai.sagernet.ui.MainActivity
+
+orbot_fdroid:
+  - org.torproject.android/org.torproject.android.OrbotActivity
+
+pachli:
+  - app.pachli/app.pachli.SplashActivity
+
+realcalc_plus:
+  - uk.co.nickfines.RealCalcPlus/uk.co.nickfines.RealCalcPlus.Calculator
+
+renpho_health:
+  - com.renpho.health/com.renpho.health.SplashActivity
+
+safespace:
+  - org.privacymatters.safespace/org.privacymatters.safespace.AuthActivity
+
+simple_time_tracker:
+  - com.razeeman.util.simpletimetracker/com.example.util.simpletimetracker.ui.MainActivity
+
+square_team:
+  - com.squareup.payroll.team/com.squareup.payroll.team.MainActivity
+
+the_telegraph:
+  - uk.co.telegraph.kindlefire/com.twipeappv4.MainActivity
+
+tiimo:
+  - com.tiimoapp.androidapp/com.tiimoapp.androidapp.ui.main.MainActivity
+
+vector_camera:
+  - com.dozingcatsoftware.vectorcamera/com.dozingcatsoftware.vectorcamera.MainActivity
+
+xapk_manager:
+  - com.apkfab.installer/com.apkpure.installer.MainActivity
