--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -190,3 +190,15 @@ microsoft_outlook:
 
 pinterest:
   - org.chromium.webapk.a131b8dd5b6604b28_v2/org.chromium.webapk.shell_apk.h2o.H2OOpaqueMainActivity
+
+alzubda:
+  - com.live.alzubda.newsapp/com.live.alzubda.newsapp.MainActivity
+
+wikimedia_commons:
+  - fr.free.nrw.commons/fr.free.nrw.commons.auth.LoginActivity
+
+librera:
+  - com.foobnix.pdf.reader/com.foobnix.ui2.MainTabs2
+
+aman:
+  - com.amansuperapp/com.amansuperapp.MainActivity
