--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -202,3 +202,18 @@ librera:
 
 aman:
   - com.amansuperapp/com.amansuperapp.MainActivity
+
+al_chan:
+  - com.zen.alchan/com.zen.alchan.ui.launch.LaunchActivity
+
+cashew:
+  - com.budget.tracker_app/com.budget.tracker_app.MainActivity
+
+play_deals:
+  - me.sujanpoudel.playdeals/me.sujanpoudel.playdeals.MainActivity
+
+relabs:
+  - io.aayush.relabs/io.aayush.relabs.MainActivity
+
+windy:
+  - com.techyminati.windy/com.techyminati.windy.MainActivity
