--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -217,3 +217,9 @@ relabs:
 
 windy:
   - com.techyminati.windy/com.techyminati.windy.MainActivity
+
+flipper_zero:
+  - com.flipperdevices.app/com.flipperdevices.singleactivity.impl.SingleActivity
+
+viper:
+  - com.wstxda.viper4android/com.wstxda.viper4android.MainActivity
