--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -223,3 +223,27 @@ flipper_zero:
 
 viper:
   - com.wstxda.viper4android/com.wstxda.viper4android.MainActivity
+
+aio_store:
+  - ru.execbit.aiostore/ru.execbit.aiostore.MainActivity
+
+screen_off:
+  - nl.matthijsvh.screenoff/nl.matthijsvh.screenoff.ScreenOffActivity
+
+skiff_calendar:
+  - com.skiffcalendarmobileapp/com.skiffcalendarmobileapp.MainActivity
+
+skiff_drive:
+  - com.skiffDriveMobileApp/com.skiffDriveMobileApp.MainActivity
+
+skiff_mail:
+  - com.skemailmobileapp/com.skemailmobileapp.MainActivity
+
+skiff_pages:
+  - com.skiffmobileapp/com.skiffmobileapp.MainActivity
+
+timesince:
+  - es.desaway.timesince/es.desaway.timesince.MainActivity
+
+timeuntil:
+  - es.desaway.timeuntil/es.desaway.timeuntil.MainActivity
