--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -223,3 +223,9 @@ flipper_zero:
 
 viper:
   - com.wstxda.viper4android/com.wstxda.viper4android.MainActivity
+
+aware:
+  - org.twentyninek.app.cupcake/org.twentyninek.app.cupcake.MainActivity
+
+forest:
+  - pl.bk20.forest/pl.bk20.forest.core.presentation.SplashActivity
