restore Anilist and Cryptee

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -250,3 +250,9 @@ aware:
 
 forest:
   - pl.bk20.forest/pl.bk20.forest.core.presentation.SplashActivity
+
+anilist:
+  - pwa.dummy/pwa.dummy
+
+cryptee:
+  - pwa.dummy/pwa.dummy
