--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,9 +24,6 @@ aha_games:
 flexcil:
   - com.flexcil.flexcilnote/com.flexcil.flexcilnote.MainActivity
 
-skiff_mail:
-  - com.skemailmobileapp/com.skemailmobileapp.MainActivity
-
 skiff_mail_alt_1: {}
 
 drinkable:
@@ -170,7 +167,7 @@ gltool:
 
 revanced_manager:
   - app.rvx.manager.flutter/app.revanced.manager.flutter.MainActivity
-  
+
 youtube:
   - org.chromium.webapk.afbcbfcece0dde55a_v2/org.chromium.webapk.shell_apk.h2o.H2OOpaqueMainActivity
 
@@ -224,8 +221,38 @@ flipper_zero:
 viper:
   - com.wstxda.viper4android/com.wstxda.viper4android.MainActivity
 
+aio_store:
+  - ru.execbit.aiostore/ru.execbit.aiostore.MainActivity
+
+screen_off:
+  - nl.matthijsvh.screenoff/nl.matthijsvh.screenoff.ScreenOffActivity
+
+skiff_calendar:
+  - com.skiffcalendarmobileapp/com.skiffcalendarmobileapp.MainActivity
+
+skiff_drive:
+  - com.skiffDriveMobileApp/com.skiffDriveMobileApp.MainActivity
+
+skiff_mail:
+  - com.skemailmobileapp/com.skemailmobileapp.MainActivity
+
+skiff_pages:
+  - com.skiffmobileapp/com.skiffmobileapp.MainActivity
+
+timesince:
+  - es.desaway.timesince/es.desaway.timesince.MainActivity
+
+timeuntil:
+  - es.desaway.timeuntil/es.desaway.timeuntil.MainActivity
+
 aware:
   - org.twentyninek.app.cupcake/org.twentyninek.app.cupcake.MainActivity
 
 forest:
   - pl.bk20.forest/pl.bk20.forest.core.presentation.SplashActivity
+
+anilist:
+  - pwa.dummy/pwa.dummy
+
+cryptee:
+  - pwa.dummy/pwa.dummy
