rename conflicting icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -212,7 +212,7 @@ play_deals:
 relabs:
   - io.aayush.relabs/io.aayush.relabs.MainActivity
 
-windy:
+windy_weather:
   - com.techyminati.windy/com.techyminati.windy.MainActivity
 
 flipper_zero:
@@ -248,7 +248,7 @@ timeuntil:
 aware:
   - org.twentyninek.app.cupcake/org.twentyninek.app.cupcake.MainActivity
 
-forest:
+forest_focus:
   - pl.bk20.forest/pl.bk20.forest.core.presentation.SplashActivity
 
 anilist:
