add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -234,3 +234,10 @@ forest_focus:
 anilist: {}
 
 cryptee: {}
+
+amarok:
+  - deltazero.amarok/deltazero.amarok.ui.MainActivity
+  - deltazero.amarok.foss/deltazero.amarok.launcher.default
+
+calces:
+  - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.splash.SplashScreenActivity
