new 2 icons, 4 compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -241,3 +241,12 @@ amarok:
 
 calces:
   - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.splash.SplashScreenActivity
+
+keepassdx_unlocker:
+  - com.kunzisoft.keepass.pro/com.kunzisoft.keepass.pro.ContributorActivity
+
+keepassdx_key_driver:
+  - com.kunzisoft.hardware.key/com.kunzisoft.hardware.key.SettingActivity
+
+db_navigator:
+  - de.hafas.android.db/db.vendo.android.vendigator.view.main.MainActivity
