--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -256,3 +256,15 @@ anilist:
 
 cryptee:
   - pwa.dummy/pwa.dummy
+
+ayugram:
+  - com.radolyn.ayugram/com.exteragram.messenger.DefaultIcon
+
+enimax:
+  - com.enimax.hehe/com.enimax.hehe.MainActivity
+
+proton_mail_beta:
+  - ch.protonmail.android.beta/ch.protonmail.android.MainActivity
+
+twine:
+  - dev.sasikanth.rss.reader/dev.sasikanth.rss.reader.MainActivity
