--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -262,3 +262,21 @@ proton_mail_beta:
 
 twine:
   - dev.sasikanth.rss.reader/dev.sasikanth.rss.reader.MainActivity
+
+readwise:
+  - com.readwise/com.readwise.MainActivity
+
+readwise_reader:
+  - com.readermobile/com.readermobile.MainActivity
+
+volume_stories:
+  - com.volumestories.flutterapp/com.ryanheise.audioservice.AudioServiceActivity
+
+cocoonweaver:
+  - ch.origin.cocoonweaver/ch.origin.cocoonweaver.main.MainActivity
+
+fleeting_notes:
+  - com.fleetingnotes/com.fleetingnotes.MainActivity
+
+anytype:
+  - io.anytype.app/com.anytypeio.anytype.ui.main.MainActivity
