new 7 icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -280,3 +280,27 @@ fleeting_notes:
 
 anytype:
   - io.anytype.app/com.anytypeio.anytype.ui.main.MainActivity
+
+freelancer:
+  - com.freelancer.android.messenger/com.freelancer.main.MainActivity
+
+nandos:
+  - nandos.android.app/nandos.android.app.MainActivity
+
+mytelenor:
+  - th.co.crie.tron2.android/com.portonics.dtac.ui.splash.SplashActivity
+
+monarch:
+  - com.monarchmoney.mobile/com.monarchmoney.mobile.SplashActivity
+
+banksalad:
+  - com.rainist.banksalad2/com.rainist.banksalad2.presentation.splash.SplashActivity
+
+hello_weather:
+  - com.helloweatherapp/com.helloweatherapp.feature.home.HomeActivity
+
+royal_enfield:
+  - com.royalenfield.reprime/com.royalenfield.reprime.ui.splash.activity.MainSplashScreenActivity
+
+stick_around:
+  - com.stickaround.app/com.stickaround.app.MainActivity
