--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -304,3 +304,15 @@ royal_enfield:
 
 stick_around:
   - com.stickaround.app/com.stickaround.app.MainActivity
+
+stack_wallet:
+  - com.cypherstack.stackwallet/com.cypherstack.stackwallet.MainActivity
+
+randomix:
+  - com.minar.randomix/com.minar.randomix.activities.MainActivity
+
+raumballer:
+  - com.kaeruct.raumballer/jgame.platform.JGActivity
+
+schildichat:
+  - de.spiritcroc.riotx/im.vector.application.features.Alias
