--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+
+portal:
+  - com.valvesoftware.source.portal/me.nillerusr.LauncherActivity
+
+portal_alt_1: {}
+
+element:
+  - io.element.android.x/io.element.android.x.MainActivity
