AAA Auto Club, Roku, and Redfin

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,12 @@ portal_alt_1: {}
 
 element:
   - io.element.android.x/io.element.android.x.MainActivity
+
+aaa_auto_club:
+  - com.ace.shell.production/com.ace.shell.ui.launcher.LauncherActivity
+
+roku:
+  - com.roku.remote/com.roku.remote.ui.activities.splash.SplashActivity
+
+redfin:
+  - com.redfin.android/com.redfin.android.activity.launch.DefaultLaunchActivity
