--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ portal_alt_1: {}
 
 element:
   - io.element.android.x/io.element.android.x.MainActivity
+
+swipefy:
+  - app.swipefy.mobile/app.swipefy.mobile.MainActivity
