--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,18 @@ element:
 
 swipefy:
   - app.swipefy.mobile/app.swipefy.mobile.MainActivity
+
+apollotv:
+  - com.apollotv/com.apollotv.MainActivity
+
+flixquest:
+  - dev.beamlak.cinemax/dev.beamlak.cinemax.MainActivity
+
+filester:
+  - om.roozbehzarei.filester/com.roozbehzarei.filester.ui.MainActivity
+
+overload:
+  - cloud.pablos.overload/cloud.pablos.overload.ui.MainActivity
+
+recurring_expenses:
+  - de.dbauer.expensetracker/de.dbauer.expensetracker.MainActivity
