--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,21 @@ overload:
 
 recurring_expenses:
   - de.dbauer.expensetracker/de.dbauer.expensetracker.MainActivity
+
+Habits:
+  - com.willbsp.habits/com.willbsp.habits.MainActivity
+
+MultiVNC:
+  - com.coboltforge.dontmind.multivnc/com.coboltforge.dontmind.multivnc.ui.MainMenuActivity
+
+Peercoin:
+  - com.coinerella.peercoin/com.coinerella.peercoin.MainActivity
+
+Taler Wallet:
+  - net.taler.wallet.fdroid/net.taler.wallet.MainActivity
+
+WAIFUPX:
+  - galahad.waifu.walls/com.galahad.dev_waifupx_dg.MainActivity
+
+WateryDroid:
+  - tmendes.com.waterydroid/tmendes.com.waterydroid.SettingsActivity
