--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,20 +36,23 @@ overload:
 recurring_expenses:
   - de.dbauer.expensetracker/de.dbauer.expensetracker.MainActivity
 
-Habits:
+habits:
   - com.willbsp.habits/com.willbsp.habits.MainActivity
 
-MultiVNC:
+multivnc:
   - com.coboltforge.dontmind.multivnc/com.coboltforge.dontmind.multivnc.ui.MainMenuActivity
 
-Peercoin:
+peercoin:
   - com.coinerella.peercoin/com.coinerella.peercoin.MainActivity
 
-Taler Wallet:
+taler_wallet:
   - net.taler.wallet.fdroid/net.taler.wallet.MainActivity
 
-WAIFUPX:
+waifupx:
   - galahad.waifu.walls/com.galahad.dev_waifupx_dg.MainActivity
 
-WateryDroid:
+waterydroid:
   - tmendes.com.waterydroid/tmendes.com.waterydroid.SettingsActivity
+
+databackup:
+  - com.xayah.databackup.premium/com.xayah.databackup.ui.activity.splash.SplashActivity
