Add Redfin, update AAA Auto Club, Roku (#688)
* AAA Auto Club, Roku, and Redfin

* Fix PNG icon

* fix redfin icon

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,7 +9,6 @@
 # new_icon_2_alt_1: {}
 #
 
-
 portal:
   - com.valvesoftware.source.portal/me.nillerusr.LauncherActivity
 
@@ -17,6 +16,15 @@ portal_alt_1: {}
 
 element:
   - io.element.android.x/io.element.android.x.MainActivity
+
+aaa_auto_club:
+  - com.ace.shell.production/com.ace.shell.ui.launcher.LauncherActivity
+
+roku:
+  - com.roku.remote/com.roku.remote.ui.activities.splash.SplashActivity
+
+redfin:
+  - com.redfin.android/com.redfin.android.activity.launch.DefaultLaunchActivity
 
 swipefy:
   - app.swipefy.mobile/app.swipefy.mobile.MainActivity
