--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -64,3 +64,6 @@ waterydroid:
 
 databackup:
   - com.xayah.databackup.premium/com.xayah.databackup.ui.activity.splash.SplashActivity
+
+sun_life:
+  - com.sunlife.ca.mysunlife/com.sunlife.ca.mysunlife.activity.SplashActivity
