--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,3 +67,18 @@ databackup:
 
 sun_life:
   - com.sunlife.ca.mysunlife/com.sunlife.ca.mysunlife.activity.SplashActivity
+
+falling_blocks:
+  - org.sajeg.fallingblocks/com.godot.game.GodotApp
+
+m3u_android:
+  - com.m3u.androidApp/com.m3u.androidApp.MainActivity
+
+nevertoomanybooks:
+  - com.hardbacknutter.nevertoomanybooks/com.hardbacknutter.nevertoomanybooks.StartupActivity
+
+paperless_mobile:
+  - de.astubenbord.paperless_mobile/de.astubenbord.paperless_mobile.MainActivity
+
+wg_tunnel:
+  - com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.ui.MainActivity
