--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -81,4 +81,7 @@ paperless_mobile:
   - de.astubenbord.paperless_mobile/de.astubenbord.paperless_mobile.MainActivity
 
 wg_tunnel:
-  - com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.ui.MainActivity
+  - com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.ui.
+  
+wallflow_plus:
+  - com.ammar.wallflow.plus/com.ammar.wallflow.activities.main.MainActivity
