add 5 new icons, replace 1 generic icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -85,3 +85,18 @@ wg_tunnel:
   
 wallflow_plus:
   - com.ammar.wallflow.plus/com.ammar.wallflow.activities.main.MainActivity
+
+hdrezka:
+  - io.fournkoner.hdrezka/io.fournkoner.hdrezka.MainActivity
+
+ttl_changer:
+  - com.mrsep.ttlchanger/com.mrsep.ttlchanger.presentation.MainActivity
+
+otp_helper:
+  - io.github.jd1378.otphelper/io.github.jd1378.otphelper.MainActivity
+
+anchr:
+  - io.muetsch.anchrandroid/io.muetsch.anchrandroid.MainActivity
+
+asciicam:
+  - com.dozingcatsoftware.asciicam/com.dozingcatsoftware.asciicam.AsciiCamActivity
