--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -100,3 +100,20 @@ anchr:
 
 asciicam:
   - com.dozingcatsoftware.asciicam/com.dozingcatsoftware.asciicam.AsciiCamActivity
+
+binaryclock:
+  - dev.jhale.binaryclock/dev.jhale.binaryclock.MainActivity
+
+keyman:
+  - com.tavultesoft.kmapro/com.tavultesoft.kmapro.SplashScreenActivity
+
+phonewalls:
+  - com.phonewalls.stockwallpapers/com.phonewalls.stockwallpapers.MainActivity
+
+takan:
+  - io.skipday.takan/io.skipday.takan.presentation.ui.MainActivity
+
+walp:
+ - com.stresscodes.wallp/com.stresscodes.wallp.CustomSplashScreen
+ - com.stresscodes.wallp/com.stresscodes.wallp.SplashScreen
+ - com.stresscodes.wallp/com.stresscodes.wallp.MainActivity
