--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -117,3 +117,16 @@ walp:
   - com.stresscodes.wallp/com.stresscodes.wallp.CustomSplashScreen
   - com.stresscodes.wallp/com.stresscodes.wallp.SplashScreen
   - com.stresscodes.wallp/com.stresscodes.wallp.MainActivity
+
+spinneys_uae:
+  - com.dnc.spinneys/com.dnc.goodtaste.com.spinneys.Activities.SplashActivity
+
+spinneys_egypt:
+  - com.emotion.spinneys/com.app.features.splash.SplashActivity
+  - com.spinneyslebanon.app/com.spinneyslebanon.ui.activities.FirstTimeActivity
+
+rugby_world_cup:
+  - com.worldrugby.main/com.pl.rwc.onboarding.master.OnBoardingActivity
+
+rugby_laws:
+  - org.worldrugby.lawsofrugby/com.sportdevelopment.worldrugbylawsandroid.Activities.LanguageSelectionActivity
