--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -130,3 +130,9 @@ rugby_world_cup:
 
 rugby_laws:
   - org.worldrugby.lawsofrugby/com.sportdevelopment.worldrugbylawsandroid.Activities.LanguageSelectionActivity
+
+energy_monitor:
+  - strange.watch.longevity.ion/com.watchandnavy.sw.ion.ui_v2.launch.LaunchActivity
+
+smartspacer:
+  - com.kieronquinn.app.smartspacer/com.kieronquinn.app.smartspacer.ui.activities.MainActivity
