--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -34,6 +34,7 @@ apollotv:
 
 flixquest:
   - dev.beamlak.cinemax/dev.beamlak.cinemax.MainActivity
+  - dev.beamlak.flixquest/dev.beamlak.flixquest.MainActivity
 
 filester:
   - om.roozbehzarei.filester/com.roozbehzarei.filester.ui.MainActivity
@@ -136,3 +137,9 @@ energy_monitor:
 
 smartspacer:
   - com.kieronquinn.app.smartspacer/com.kieronquinn.app.smartspacer.ui.activities.MainActivity
+
+relabs:
+  - io.aayush.relabs.continuous/io.aayush.relabs.MainActivity
+
+pcapdroid:
+  - com.pcapdroid.mitm/com.pcapdroid.mitm.MainActivity
