--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,10 +9,10 @@
 # new_icon_2_alt_1: {}
 #
 
-portal:
+portal_valve:
   - com.valvesoftware.source.portal/me.nillerusr.LauncherActivity
 
-portal_alt_1: {}
+portal_valve_alt_1: {}
 
 element:
   - io.element.android.x/io.element.android.x.MainActivity
