--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,8 @@
 #
 # new_icon_2_alt_1: {}
 #
+raneen:
+  - com.raneen.mobapp/com.raneen.mobapp.MainActivity
+
+atomicclock:
+  - partl.atomicclock/partl.atomicclock.MainActivity
