Add new ComponentInfo for Spriggy, Pokemon Go and Brilliant

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,11 @@
 #
 # new_icon_2_alt_1: {}
 #
+spriggy:
+  - au.com.spriggy.app/com.spriggy.SpriggyAppIcon
+
+pokemongo:
+  - com.nianticlabs.pokemongo/com.nianticlabs.platform.launcher.NianticUnityPlayerActivity
+
+brilliant:
+  - org.brilliant.android/org.brilliant.android.ui.common.MainActivity
