--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -16,3 +16,6 @@ pokemongo:
 
 brilliant:
   - org.brilliant.android/org.brilliant.android.ui.common.MainActivity
+
+stan:
+  - au.com.stan.and/au.com.stan.and.SplashActivity
