--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -25,3 +25,9 @@ brilliant:
 
 stan:
   - au.com.stan.and/au.com.stan.and.SplashActivity
+
+gptassist:
+  - org.woheller69.gptassist/org.woheller69.gptassist.MainActivity
+
+huggingassist:
+  - org.woheller69.huggingwrap/org.woheller69.huggingchat.MainActivity
