--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -31,3 +31,6 @@ gptassist:
 
 huggingassist:
   - org.woheller69.huggingwrap/org.woheller69.huggingchat.MainActivity
+
+uniqlo:
+  - com.uniqlo.it.catalogue/com.uniqlo.ja.catalogue.MainActivity
