--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -34,3 +34,36 @@ huggingassist:
 
 uniqlo:
   - com.uniqlo.it.catalogue/com.uniqlo.ja.catalogue.MainActivity
+
+antiiq:
+  - com.coleblvck.antiiq/com.ryanheise.audioservice.AudioServiceActivity
+
+microsoft_lists:
+  - com.microsoft.lists.public/com.microsoft.lists.MainActivity
+
+mute_reminder:
+  - com.github.muellerma.mute_reminder/com.github.muellerma.mute_reminder.MainActivity
+
+nba_2k_mobile:
+  - com.catdaddy.nba2km/com.catdaddy.nba2km.StaticLibLoader
+
+parabox:
+  - com.ojhdtapp.parabox/com.ojhdtapp.parabox.MainActivity
+
+pearler:
+  - com.pearler.platypus/com.pearler.platypus.MainActivity
+
+thorium_browser:
+  - org.chromium.thorium/com.google.android.apps.chrome.Main
+
+unlockmaster:
+  - com.sweak.unlockmaster/com.sweak.unlockmaster.presentation.MainActivity
+
+vibe_you:
+  - app.suhasdissa.vibeyou/app.suhasdissa.vibeyou.MainActivity
+
+vr_chat:
+  - com.vrchat.mobile.playstore/com.google.firebase.MessagingUnityPlayerActivity
+
+wa_tweaker:
+  - com.alex193a.watweaker/com.alex193a.watweaker.activity.SplashScreenActivity
