--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,3 +67,9 @@ vr_chat:
 
 wa_tweaker:
   - com.alex193a.watweaker/com.alex193a.watweaker.activity.SplashScreenActivity
+
+round_sync:
+  - de.felixnuesse.extract.debug/ca.pkay.rcloneexplorer.Activities.MainActivity
+
+cryptomator:
+  - org.cryptomator.lite/org.cryptomator.presentation.ui.activity.VaultListActivity
